--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -23,3 +23,13 @@
     <span class="cart-count" id="cart-count">0</span>
   </a>
 </div>
+<nav>
+  <ul>
+    <!-- ...existing navigation items... -->
+    <li>
+      <a href="/wishlist/index.html" class="wishlist-link">
+        Wishlist
+      </a>
+    </li>
+  </ul>
+</nav>
