--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -2,7 +2,12 @@
   <img src="/images/noun_Tent_2517.svg" alt="tent image for logo" />
   <a href="/">Sleep<span class="highlight">Outside</span></a>
 </div>
-<form id="searchForm" action="/product_listing/index.html" method="GET" class="search-bar">
+<form
+  id="searchForm"
+  action="/product_listing/index.html"
+  method="GET"
+  class="search-bar"
+>
   <input
     type="text"
     name="search"
@@ -15,10 +20,20 @@
 
 <div class="cart">
   <a href="/cart/index.html" id="cart-link">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-      <path d="M18.9 32.6c1.1 2.4 2.5 3.3 5.4 3.3 1.6 0 3.6-0.3 5.9-0.6 3.2-0.5 6.9-1 11.2-1 2.1 0 4.3 0.1 6.4 0.3 2.1 0.1 4.2 0.3 6.1 0.3 3.2 0 5.2-0.4 5.9-1.2 2.7-2.7 2.8-8.8 2.9-14.6 0.1-6.7 0.2-14.5 4.6-18.7 -0.5 0-1 0-1.6 0 -14.2 0-37.5 0-41.1 0C15.6 6.2 14.9 23.6 18.9 32.6z"/>
-      <path d="M90.1 29.7c1-3.3 1.5-7.3 1.5-11.2 0-9-2.7-18.8-8.6-18.8 -0.1 0-0.2 0-0.3 0L77.8-0.1c-0.3 0.2-0.8 0.3-1.1 0.4 0 0 0 0 0 0 -0.2 0-0.3 0-0.4 0 -4.5 0.1-7.1 4.4-7.1 12.1 0 3.8 0.6 7.4 1.6 10.5 1.4 4.4 3.6 7.5 6.1 8.6 0.8 0.4 1.7 0.5 2.6 0.5 3.3 0 6.5-2.3 8.1-7.7C87.9 26.5 89.1 28.4 90.1 29.7z"/>
-      <path d="M54.3 72.4c-3.8-1.8-5.6-3.2-5.6-6.5 0-2.2 1.6-4.7 4.6-4.7 1.9 0 3.8 0.6 5.5 1.7l3.5-6.3c-2.7-1.5-5.7-2.2-8.6-2.2 -7.7 0-13.2 5.9-13.2 12.1 0 6.2 3.9 9.8 10.3 12.6 3.9 1.7 5.7 3.2 5.7 6.5 0 2.4-1.8 4.7-5.2 4.7 -3.1 0-5.6-1.2-7.9-2.7l-3.5 6.3c3.4 2.1 7.2 3.1 11 3.1 8.4 0 13.8-5.3 13.8-12.2C64.7 78.7 60.4 75.3 54.3 72.4z"/>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 100 100"
+      preserveAspectRatio="xMidYMid meet"
+    >
+      <path
+        d="M18.9 32.6c1.1 2.4 2.5 3.3 5.4 3.3 1.6 0 3.6-0.3 5.9-0.6 3.2-0.5 6.9-1 11.2-1 2.1 0 4.3 0.1 6.4 0.3 2.1 0.1 4.2 0.3 6.1 0.3 3.2 0 5.2-0.4 5.9-1.2 2.7-2.7 2.8-8.8 2.9-14.6 0.1-6.7 0.2-14.5 4.6-18.7 -0.5 0-1 0-1.6 0 -14.2 0-37.5 0-41.1 0C15.6 6.2 14.9 23.6 18.9 32.6z"
+      />
+      <path
+        d="M90.1 29.7c1-3.3 1.5-7.3 1.5-11.2 0-9-2.7-18.8-8.6-18.8 -0.1 0-0.2 0-0.3 0L77.8-0.1c-0.3 0.2-0.8 0.3-1.1 0.4 0 0 0 0 0 0 -0.2 0-0.3 0-0.4 0 -4.5 0.1-7.1 4.4-7.1 12.1 0 3.8 0.6 7.4 1.6 10.5 1.4 4.4 3.6 7.5 6.1 8.6 0.8 0.4 1.7 0.5 2.6 0.5 3.3 0 6.5-2.3 8.1-7.7C87.9 26.5 89.1 28.4 90.1 29.7z"
+      />
+      <path
+        d="M54.3 72.4c-3.8-1.8-5.6-3.2-5.6-6.5 0-2.2 1.6-4.7 4.6-4.7 1.9 0 3.8 0.6 5.5 1.7l3.5-6.3c-2.7-1.5-5.7-2.2-8.6-2.2 -7.7 0-13.2 5.9-13.2 12.1 0 6.2 3.9 9.8 10.3 12.6 3.9 1.7 5.7 3.2 5.7 6.5 0 2.4-1.8 4.7-5.2 4.7 -3.1 0-5.6-1.2-7.9-2.7l-3.5 6.3c3.4 2.1 7.2 3.1 11 3.1 8.4 0 13.8-5.3 13.8-12.2C64.7 78.7 60.4 75.3 54.3 72.4z"
+      />
     </svg>
     <span class="cart-count" id="cart-count">0</span>
   </a>
@@ -27,9 +42,7 @@
   <ul>
     <!-- ...existing navigation items... -->
     <li>
-      <a href="/wishlist/index.html" class="wishlist-link">
-        Wishlist
-      </a>
+      <a href="/wishlist/index.html" class="wishlist-link"> Wishlist </a>
     </li>
   </ul>
 </nav>
