fix: Update product list styles and enhance wishlist image handling

--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -42,7 +42,7 @@
   <ul>
     <!-- ...existing navigation items... -->
     <li>
-      <a href="/wishlist/index.html" class="wishlist-link"> Wishlist </a>
+      <a href="../wishlist/index.html" class="wishlist-link"> Wishlist </a>
     </li>
   </ul>
 </nav>
